css/taskboard.css
body {
	font-family: arial;
	background: darkgrey;
}
#taskboard-toolbar {
	display:block;
	background:darkgrey;
	height:10em;
	z-index:10;
	width:100%;
}
.stuck-toolbar {
	position:fixed;
	margin-top:0em;
}
.moving-toolbar {
	position:absolute;
	margin-top:4.5em;
}


.interval-button {
	padding:5px;
}


.context-menu-item {
	padding-top:5px;
	padding-bottom:5px;
}
.my-context-menu{
	width:100px !important;
	min-width:100px !important;
}



.repeat-block {
	position:absolute;
}
.repeat-block-past {
	top:0.2em;
	right:0.3em;
}
.repeat-block-normal {
	right:0.2em;
	bottom:0em;
}

.repeat-icon{
	opacity:0.1;
}
.repeat-icon-past {
	font-size:2.6em;
}
.repeat-icon-normal {
	font-size:3em;
}

.repeat-num{
	opacity:0.8;
	width:100%;
	top:0.8em;
	text-align:center;
	position:absolute;
	vertical-align:middle;
}
.repeat-num-past {
	top:0.6em;
}

.alert-icon {
	font-size:3em;
	position:absolute;
	left:0.1em;
	bottom:0.1em;
}
.alert-indent {margin-left:0.3em;}

.countdown-block {
	position:absolute;
	left:0.3em;
	bottom:0.3em;
}
.countdown-icon{
	font-size:3em;
}
.countdown-label{
	position:absolute;
	top:0.8em;
	font-size:1.2em;
	width:100%;
}

.icon-span {
	display:inline-block;margin-left:1em;
}
.icon-span-margin {
	margin-right:1.5em;
}
.clock-icon {
	display:inline-block;margin:1px;
}

#taskboard-toolbar {
	display:flex;
}
#left-buttons {
	flex-grow: 1;
	flex-shrink: 99;
	flex-basis: 600px;
	text-align:left;
}
#middle-buttons {
	flex-grow: 0;
	flex-shrink: 1;
	flex-basis: 40em;
	/*flex: 0 1 430px;*/
	text-align:center;
	display:none;
}
.middle-button {
	top:1em;
	position:relative;
	margin-top:30px;
	margin-left:30px;
	display:inline-block;
}
.shape-button {
	height:2em;
}
#right-buttons {
	flex: 1 99 600px;
	text-align:right;
	display:none;
}

.task-block {
	position:relative;
	display:inline-block;
	padding: 0.8em;
	margin: 0.8em;
	font-family: arial;
	float:left;
	cursor:hand;
}

.past-task {
	width: 100%;
	text-align: left;
}
.past-task .task-name {
	height:1.2em;display:inline-block;
}
.past-task .start-date {
	display:inline-block;margin-left:1em;
}

.now-task {
	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
	text-align: center;
}
.now-task .task-name {
	height:1.5em;width:15em;text-align:center;
}

.later-task {
	text-align: center;
	opacity: 0.5;
}
.later-task .task-name {
	height:1.5em;width:15em;text-align:center;
}

.wide-task {
	height:4em;
	width:20em;
	padding-left:3em;
	padding-right:3em;
}
.default-task {
	height:10em;
	width:16em;
}
.row-name {
	clear:both;
	float:left;
	width:0px;
	position:relative;
	display:inline-block;
}
.wide-row-name {
	height:4em;
}
.default-row-name {
	height:10em;
}


.finish-area {
	height:100px;
	width:200px;
	margin:10px;
	padding:10px;
	float:right;
	margin-right:15px;
	text-align:center;
	color:#FFFFFF;
}
.normal-finish {
	background:#000000;
}
.hover-finish {
	background:#444444;
	border: 2px solid white;
}

.task-row:after {
	clear:both;
	content:" ";
	display:table;
}
.task-row {
	margin-top:0em;
	margin-left:0.5em;
	margin-right:0.5em;
	margin-bottom:0.5em;
	padding: 0.5em;
	padding-left:0.8em;
	padding-right:1em;
	border-radius: 10px;
	border: 2px solid #000000;
	padding-left:2em;
	}
.normal-row {
	background: #F0F0F0;
}
.hover-row {
	background: #FFFFFF;
}
.table-bar {
	float:left;
	width:100%;
	padding-right:1.6em;
}
.table-contents {
	float:left;
}


#output {
	width:100%;
}
.padded-app-header {
	position:absolute;
	top:0em;
}
.padded-output {
	margin-top:13.5em;
}

.left-side{
	min-width:21.9em;
	float: left;
	margin-right:0.5em;
	}
.misc-block {
	margin:0.5em;
	padding: 0.5em;
	padding-left:1em;
	padding-right:1em;
	border-radius: 10px;
	border: 2px solid #000000;
	width:auto;
	height:auto;
	overflow:hidden;
	min-height:12.8em;
	min-width:20em;
	padding-bottom:13em;
}	
.misc-block:after {
	clear:both;
	content:" ";
	display:table;
}	
.app-header {
	background:darkgrey;
	color: #fff;
	text-shadow: -1px -1px 0 #000,1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;  
	-webkit-font-smoothing: antialiased;
	}

.vertical-text {
	transform: translate(-50%) translate(-1.5em) rotate(-90deg);
	transform-origin: center center 0em;
	text-align:center;
	position:absolute;
	top:50%;
	left:10px;
	}
.toolbar-button {
	margin:15px;
	margin-left: 30px;
}
.ui-dialog .ui-dialog-buttonpane button {
	padding-top: 5px;
	padding-bottom: 5px;
}
.my-dialog {
	display:none;
}

